LU-18763 osd: fix credits calculation for overwrites

we can't rely on size=blocks*bs calculation to recognize sparse
files, but we can use brm structures to check whether specific
blocks have been allocated already.

overall stats shows that upto ~30% declarations find blocks already
allocated, thus we can save on credits. llogs is the most frequent
user of this code: osp logs, changelogs.

Fixes: 3902ff4c549 ("LU-4611 osd: improve credits calculation")
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: Id5d9b1cc41dbf1c5c42556c49d2fdd9eb51161aa
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64649
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Reviewed-by: Jinshan Xiong <jinshanx@google.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>